src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>OM_Margin__c</fullName>
        <label>Margin %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OM_Product_Category__c</fullName>
        <formula>PricebookEntry.OM_Product_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Product_Class__c</fullName>
        <formula>PricebookEntry.OM_Product_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Product_Margin_Revenue__c</fullName>
        <formula>OM_Margin__c * TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Margin Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>